# LibMUTF8

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mutf8.c  mutf8.h  mutf8decode.main.c  mutf8encode.main.c
tests/: c16tomutf8.fuzz.c  mutf8toc16.fuzz.c
